src/objects/WES_Application_Request__c.object
<CustomObject>
    <fields>
        <fullName>HistoricalTown__c</fullName>
        <description>Used to backfill Radius Application Data</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Historical Town</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HistoricalVATNumber__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Historical VAT Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hold_Expiration_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Hold Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>How_do_you_currently_buy_fuel__c</fullName>
        <label>How do you currently buy fuel?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>WES_How_Buy_Fuel</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IFCS_Business_Entity_Code__c</fullName>
        <formula>CASE(TEXT(Account__r.WES_Business_Entity_Type__c), 
&quot;Sole Proprietor&quot;, &quot;B02&quot;, 
&quot;Partnership&quot;, &quot;B03&quot;, 
&quot;Limited Company&quot;, &quot;B04&quot;, 
&quot;Public Limited Company&quot;, &quot;B05&quot;, 
&quot;Government Body&quot;, &quot;B06&quot;, 
&quot;Charity or Trust&quot;, &quot;B07&quot;, 
&quot;Limited Liability Partnership&quot;, &quot;B08&quot;, 
NULL)</formula>
        <label>IFCS Business Entity Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IFCS_Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>IFCS App Technical Details</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IFCS_Request_Body__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>IFCS Request Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IFCS_Response__c</fullName>
        <description>IFCS Integration status or error details.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>IFCS Response</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IFCS__c</fullName>
        <formula>Account__r.Integration_Status_Details__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Integration Status Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insured_Limit__c</fullName>
        <label>Insured Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Insurer__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Insurer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Status_Detail__c</fullName>
        <description>Integration status detail from target integration system (Genesis). Includes success and failures.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Integration status detail from Genesis</inlineHelpText>
        <label>Integration Status Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Integration_Status__c</fullName>
        <label>Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Account Creation Success</fullName>
                </value>
                <value>
                    <fullName>Account Creation Error</fullName>
                </value>
                <value>
                    <fullName>Add Cards Success</fullName>
                </value>
                <value>
                    <fullName>Add Cards Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_Format__c</fullName>
        <label>Invoice Format</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2</fullName>
                    <default>true</default>
                    <label>Email</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <label>Postal Mail Interface</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsFeeOverride__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Fee Override?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language_Code__c</fullName>
        <description>3 Char Language Code</description>
        <label>Correspondence Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ENG</fullName>
                    <default>true</default>
                    <label>ENG</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Letter_from_Government__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Letter from Government</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Litrespendpervehicle__c</fullName>
        <formula>(MonthlyFuelVolumeLitres__c / ofVehicles__c)</formula>
        <inlineHelpText>Monthly Fuel Volume (Litres) / # of Vehicles</inlineHelpText>
        <label>Litre spend per vehicle</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MadeDDPaymentswithaccountbefore__c</fullName>
        <label>Made DD Payments with account before?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mailing_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Mailing Address</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MonthlyFuelVolumeLitres__c</fullName>
        <description>Petrol used per month (Litres) + Diesel used per month (Litres)</description>
        <formula>Petrol_used_per_month_Litres__c +  Diesel_per_month_Litres__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Set Petrol &amp; Diesel used per month (Litres) to sum total here.</inlineHelpText>
        <label>Monthly Fuel Volume (Litres)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NameOnCard__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Company Name appearing on all Fuel cards (20 chars max)</inlineHelpText>
        <label>Name appearing on Card</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Num_years_trading__c</fullName>
        <formula>Account__r.WES_Num_years_trading__c</formula>
        <label># of years trading</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumofEDCDefaults__c</fullName>
        <label># of EDC Defaults</label>
        <summaryFilterItems>
            <field>WES_Fuel_Card_Default__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>EDC</value>
        </summaryFilterItems>
        <summaryForeignKey>WES_Fuel_Card_Default__c.WES_Application_Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumofEssoDefaults__c</fullName>
        <description>Used in validation rule to make sure there can be at most 1 default per card type.</description>
        <label># of Esso Defaults</label>
        <summaryFilterItems>
            <field>WES_Fuel_Card_Default__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Esso</value>
        </summaryFilterItems>
        <summaryForeignKey>WES_Fuel_Card_Default__c.WES_Application_Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumofUKFuelDefaults__c</fullName>
        <label># of UK Fuels Defaults</label>
        <summaryFilterItems>
            <field>WES_Fuel_Card_Default__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>UK Fuels</value>
        </summaryFilterItems>
        <summaryForeignKey>WES_Fuel_Card_Default__c.WES_Application_Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OBU_Device_Required__c</fullName>
        <label>OBU Device Required?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>true</fullName>
                </value>
                <value>
                    <fullName>false</fullName>
                    <default>true</default>
                    <label>false</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OppBiggestVehicle__c</fullName>
        <formula>IF(INCLUDES(Opportunity__r.WES_TypeofVehicles__c,&quot;HGV&quot;),&quot;HGV&quot;, 
IF(INCLUDES(Opportunity__r.WES_TypeofVehicles__c,&quot;LGV&quot;),&quot;LGV&quot;, 
IF(INCLUDES(Opportunity__r.WES_TypeofVehicles__c,&quot;Coaches&quot;),&quot;Coaches&quot;, 
IF(INCLUDES(Opportunity__r.WES_TypeofVehicles__c,&quot;Vans&quot;),&quot;Vans&quot;, 
IF(INCLUDES(Opportunity__r.WES_TypeofVehicles__c,&quot;Cars&quot;),&quot;Cars&quot;,
IF(INCLUDES(Opportunity__r.WES_TypeofVehicles__c,&quot;Motorcycles&quot;),&quot;Cars&quot;,
IF(INCLUDES(Opportunity__r.WES_TypeofVehicles__c,&quot;Other&quot;),&quot;Cars&quot;,
&quot;&quot;)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Biggest Vehicle</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Group_Code__c</fullName>
        <formula>Opportunity__r.Group_Code__c</formula>
        <label>Opportunity Group Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Lead_Source__c</fullName>
        <description>The parent Opportunity&apos;s Lead Source</description>
        <formula>TEXT(Opportunity__r.LeadSource)</formula>
        <inlineHelpText>Set on the related Opportunity</inlineHelpText>
        <label>Enquiry Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Partner__c</fullName>
        <formula>Opportunity__r.Partner__r.Name</formula>
        <label>Opportunity Partner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Product_Type__c</fullName>
        <formula>TEXT(Opportunity__r.Product_Type__c)</formula>
        <label>Opportunity Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Rep_Code__c</fullName>
        <formula>TEXT(Opportunity__r.Area_Manager__c)</formula>
        <label>Opportunity Rep Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>WES business processes.
The parent Opportunity of this Application Request</description>
        <inlineHelpText>The parent Opportunity of this Application Request</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>WES Application Requests</relationshipLabel>
        <relationshipName>WES_Application_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Overall_Credit_Limit__c</fullName>
        <formula>Credit_Authorised_Limit__c +  Insured_Limit__c +  Sign_Off_Limit__c +  Security_Limit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Owner_Assigned__c</fullName>
        <formula>IF(
OR(
$User.Id = OwnerId,
$User.Id = Sales_Agent_Assigned__c,
$User.Id = CreditAgentAssigned__c 
),TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner / Assigned?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_Profile_Name__c</fullName>
        <formula>Owner:User.Profile.Name</formula>
        <label>Owner Profile Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_User_Role_Name__c</fullName>
        <formula>Owner:User.UserRole.Name</formula>
        <label>Owner User Role Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account_IFCS_Id__c</fullName>
        <formula>Account__r.Parent_Account_IFCS_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account IFCS ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account_Name__c</fullName>
        <formula>Account__r.Parent.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Passed_Security_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marked as True through approval process.</description>
        <inlineHelpText>Once all the sections are marked complete, press the &quot;Request Approval&quot; to begin security check process. This field will be checked once it&apos;s approved and will be passed to credit.</inlineHelpText>
        <label>Passed Security Check?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PaymentMethod__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PMCHQ</fullName>
                    <label>CHEQUE</label>
                </value>
                <value>
                    <fullName>PMDDB</fullName>
                    <default>true</default>
                    <label>DD</label>
                </value>
                <value>
                    <fullName>PMEFT</fullName>
                    <label>BANK TRANS</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Currency__c</fullName>
        <description>UK Pounds, Euro&apos;s etc 3 character ISO 4217 code</description>
        <label>Payment Currency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GBP</fullName>
                    <default>true</default>
                    <label>GBP</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Periodic_Assessment__c</fullName>
        <description>Review Date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Periodic Assessment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Petrol_used_per_month_GBP__c</fullName>
        <label>Petrol used per month (GBP)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Petrol_used_per_month_Litres__c</fullName>
        <label>Petrol used per month (Litres)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Policy_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Policy Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Positive_Balance_Account_Credit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Positive Balance Account Credit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Positive_Balance_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the Customer is to be set up as a Positive Balance Account. If this field is set to &quot;Y&quot; (and the Credit Department has accepted the Positive Balance Account via the Positive Balance Account Credit field) the Account will be flagged as Positive Balance. (Y - Yes or N - No).</description>
        <inlineHelpText>Indicates if the Customer is to be set up as a Positive Balance Account.</inlineHelpText>
        <label>Positive Balance Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Positive_Balance_Limit__c</fullName>
        <inlineHelpText>Only required if the Account is to be set up in Positive Balance format. This is the limit of the Positive Balance Account. The maximum limit allowed is $1000.</inlineHelpText>
        <label>Positive Balance Limit</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PriceOffered__c</fullName>
        <inlineHelpText>Pence per Litre</inlineHelpText>
        <label>Price Offered</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_Type__c</fullName>
        <label>Price Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed Weekly Price</fullName>
                    <default>true</default>
                    <label>Fixed Weekly Price</label>
                </value>
                <value>
                    <fullName>Checkatrade</fullName>
                    <isActive>false</isActive>
                    <label>Checkatrade</label>
                </value>
                <value>
                    <fullName>Gett</fullName>
                    <isActive>false</isActive>
                    <label>Gett</label>
                </value>
                <value>
                    <fullName>Porsche Drivers Club</fullName>
                    <isActive>false</isActive>
                    <label>Porsche Drivers Club</label>
                </value>
                <value>
                    <fullName>Pump Price + Rebate</fullName>
                    <isActive>false</isActive>
                    <label>Pump Price + Rebate</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pricing_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pricing Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Name__c</fullName>
        <formula>Primary_Contact__r.Full_Name__c</formula>
        <label>Primary Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Phone__c</fullName>
        <formula>Opportunity__r.Primary_Contact__r.Phone</formula>
        <label>Primary Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Primary Contact for WES Application Requests</relationshipLabel>
        <relationshipName>WES_Application_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Source_CampaignID__c</fullName>
        <description>Primary Source Campaign of the related Opportunity</description>
        <formula>Opportunity__r.Campaign.Id</formula>
        <label>Primary Source Campaign ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Source_Campaign__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp;Opportunity__r.Campaign.Id
, Opportunity__r.Campaign.Name)</formula>
        <inlineHelpText>Set on the related Opportunity</inlineHelpText>
        <label>Primary Source Campaign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proceed_with_Invalid_BAN__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marked as True through approval process to be able to proceed with processing the Application.</description>
        <label>Proceed with Invalid BAN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProceedwithSecurityCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field automatically gets checked if all fields needed to proceed with a security check are complete.</inlineHelpText>
        <label>Proceed with Security Check?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Esso + National UK (WEX)</fullName>
                </value>
                <value>
                    <fullName>Esso + International UK (WEX)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proof_Of_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Proof Of Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prospect_Type__c</fullName>
        <label>Prospect Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sole Trader</fullName>
                </value>
                <value>
                    <fullName>Partnership</fullName>
                </value>
                <value>
                    <fullName>Limited Company</fullName>
                </value>
                <value>
                    <fullName>PLC</fullName>
                </value>
                <value>
                    <fullName>Government Body</fullName>
                </value>
                <value>
                    <fullName>Charity or Trust</fullName>
                </value>
                <value>
                    <fullName>LLP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Readguarantee__c</fullName>
        <label>Read guarantee?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Now</fullName>
                </value>
                <value>
                    <fullName>Later</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReadyforCreditDecision__c</fullName>
        <formula>AND( 
TEXT(SenseCheck__c) = &quot;Passed&quot;, 
TEXT(ExistingAccountCheck__c) = &quot;Clear&quot;, 
TEXT(FraudCheck__c) = &quot;Passed&quot; || TEXT(FraudCheck__c) = &quot;N/A&quot;,
NOT(ISBLANK(Periodic_Assessment__c )),
NOT(ISBLANK(TEXT(Dunning_Classification__c))),
NOT(ISBLANK(TEXT(RiskCategory__c)))		  
)</formula>
        <inlineHelpText>The following checks and fields must be complete before a credit decision can be made: Sense Check, Existing Account Check, Fraud Check, Periodic Assessment, Dunning Classification, Risk Category.</inlineHelpText>
        <label>Ready to Accept?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_for_Contract__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reason for Contract</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordLocked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Record Locked from editing once the application has been accepted and sent to IFCS</description>
        <label>Record Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Record_Source_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Record Source ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Reject_Type__c</fullName>
        <label>Reason Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Credit_Decision__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Reason</fullName>
                </value>
                <value>
                    <fullName>Non-Credit Reason</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Required_Credit_Limit_Met__c</fullName>
        <formula>IF(Overall_Credit_Limit__c &gt;=  Required_Credit_Limit__c,
IMAGE(&quot;/img/samples/flag_green.gif&quot;,&quot;Green&quot;),
IMAGE(&quot;/img/samples/flag_red.gif&quot;,&quot;Red&quot;)
			)</formula>
        <inlineHelpText>Overall Credit Limit is &gt;= to the Required Credit Limit from Customer</inlineHelpText>
        <label>Required Credit Limit Met?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_Credit_Limit__c</fullName>
        <inlineHelpText>Credit Limit Calculated based on Volume and Payment Terms</inlineHelpText>
        <label>Required Credit Limit</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revert_To_Status__c</fullName>
        <label>Revert To Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Assigned For Assessment</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Cancelled Follow Up</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Credit Assessment</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Declined Initial</fullName>
                </value>
                <value>
                    <fullName>Error Referred</fullName>
                </value>
                <value>
                    <fullName>Fulfilled</fullName>
                </value>
                <value>
                    <fullName>Genesis Error</fullName>
                </value>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Initiated</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Letter Sent</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Pending Assessment</fullName>
                </value>
                <value>
                    <fullName>Pending Customer</fullName>
                </value>
                <value>
                    <fullName>Pending CVS</fullName>
                </value>
                <value>
                    <fullName>Pending Data Check</fullName>
                </value>
                <value>
                    <fullName>Pending EMTC</fullName>
                </value>
                <value>
                    <fullName>Pending Puma Promo</fullName>
                </value>
                <value>
                    <fullName>Re-assessment</fullName>
                </value>
                <value>
                    <fullName>Referred</fullName>
                </value>
                <value>
                    <fullName>Sales / Credit Review</fullName>
                </value>
                <value>
                    <fullName>Sent To IFCS</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Withdrawn Follow Up</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
                <value>
                    <fullName>RPS Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RiskCategory__c</fullName>
        <label>Risk Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>1 - Very Low</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>2 - Low</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>3 - Medium</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>4 - High</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>5 - Very High</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <isActive>false</isActive>
                    <label>8 - High - Risk Grade Fee Exempt</label>
                </value>
                <value>
                    <fullName>9</fullName>
                    <isActive>false</isActive>
                    <label>9 - Very High - Risk Grade Fee Exempt</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Risk_Category_Formula__c</fullName>
        <formula>IF(DNB_Failure_Score__c &gt; 80, &quot;Very Low&quot;,
IF(DNB_Failure_Score__c &gt; 55 &amp;&amp; DNB_Failure_Score__c &lt;= 80, &quot;Low&quot;,
IF(DNB_Failure_Score__c &gt; 30 &amp;&amp; DNB_Failure_Score__c &lt;= 55, &quot;Medium&quot;,
IF(DNB_Failure_Score__c &gt; 25 &amp;&amp; DNB_Failure_Score__c &lt;= 30, &quot;High&quot;,
IF(DNB_Failure_Score__c &lt;= 25, &quot;Very High&quot;,
IF(Equifax_Score__c  &gt;= 505, &quot;Very Low&quot;,
IF(Equifax_Score__c  &gt;= 390 &amp;&amp; Equifax_Score__c  &lt; 505, &quot;Low&quot;,
IF(Equifax_Score__c  &gt;= 210 &amp;&amp; Equifax_Score__c  &lt; 390, &quot;Medium&quot;,
IF(Equifax_Score__c  &gt;= 120 &amp;&amp; Equifax_Score__c  &lt; 210, &quot;High&quot;,
IF(Equifax_Score__c  &lt; 120, &quot;Very High&quot;,
NULL))))))))))</formula>
        <label>Risk Category Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Round_Robin_Queue_Position__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Round_Robin_Queue_Position</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Round_Robin_Queue__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Round_Robin_Queue</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA_within_5_days__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SLA within 5 days</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Agent_Assigned__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Agent Assigned</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You must select an active member of the WES Sales team.</errorMessage>
            <filterItems>
                <field>User.Role_Name__c</field>
                <operation>contains</operation>
                <value>WES</value>
            </filterItems>
            <filterItems>
                <field>User.Role_Name__c</field>
                <operation>contains</operation>
                <value>sales</value>
            </filterItems>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>WES_Application_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>